--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "2.27.10",
     "del": "7.0.0",
     "gulp": "4.0.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-html-bemlinter": "2.1.2",
     "gulp-if": "3.0.0",
     "gulp-less": "5.0.0",
